[master] initiales template erstellt
Signed-off-by: Huluvu424242 alias Thomas Schubert <huluvu424242@gmail.com>

--- a/src/components/honey-news/feeds/Feeds.css
+++ b/src/components/honey-news/feeds/Feeds.css
@@ -1,5 +1,5 @@
-@import url("../assets/paper.css");
+/*@import url("../assets/paper.css");*/
 
-.label{
-  background-color: var(--background-color-dark);
-}
+/*.label{*/
+/*  background-color: var(--background-color-dark);*/
+/*}*/
