--- a/src/components/honey-news/header/Header.css
+++ b/src/components/honey-news/header/Header.css
@@ -1,5 +1,5 @@
-@import url("../assets/paper.css");
+/*@import url("../assets/paper.css");*/
 
-.selected {
-  border-color: var(--primary-light,#41403e);
-}
+/*.selected {*/
+/*  border-color: var(--primary-light,#41403e);*/
+/*}*/
